# MedievalGJ

./: .gitignore  CMakeLists.txt  README.md
assets/: CMakeLists.txt
src/: main.cpp
