CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
SET(PROYECT_NAME MedievalGJ)
PROJECT(${PROYECT_NAME})

# Cargar GLFW
SET(GLFW_BUILD_EXAMPLES OFF)
SET(GLFW_BUILD_TESTS OFF)
SET(GLFW_BUILD_DOCS OFF)
SET(GLFW_INSTALL OFF)
ADD_SUBDIRECTORY(./lib/glfw)
SET_TARGET_PROPERTIES(glfw PROPERTIES FOLDER "lib")
LINK_LIBRARIES(glfw)
INCLUDE_DIRECTORIES(${glfw_INCLUDE_DIRS})
INCLUDE_DIRECTORIES("${GLFW_SOURCE_DIR}/deps/")
SET(GLAD "${GLFW_SOURCE_DIR}/deps/glad/glad.h" "${GLFW_SOURCE_DIR}/deps/glad.c")

# Agregar recursos
ADD_SUBDIRECTORY(./assets)
ADD_EXECUTABLE(${PROYECT_NAME} 
	src/main.cpp 
	${GLAD}
)

INSTALL(TARGETS ${PROYECT_NAME} DESTINATION bin)